# py_oidc_client

./: Pipfile  ReadMe.md  app.py  auth.yml  env_template  fast_app.py  pyproject.toml  requirements.txt  sandbox.bash  users.txt
docker/auth/: Dockerfile
